<package format="3">
  <name>pizza_serving_bot</name>
  <version>0.1.0</version>
  <description>Pizza serving bot using ROS 2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>Qt5Widgets</depend>

  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_cmake</exec_depend>
</package>
